--- a/drug_sales.Rmd
+++ b/drug_sales.Rmd
@@ -5,7 +5,7 @@ library(lubridate)
 library(fpp3)
 
 #Loading data 
-pharma_sales <- read_csv("/Users/Elias/Downloads/Portfolio/salesmonthly.csv")
+pharma_sales <- read_csv("salesmonthly.csv")
 
 head(pharma_sales)
 
